// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circular data types accept circular types 1`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "xyz",
    },
  ],
}
`;

exports[`circular data types accept circular types 2`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "abc",
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept circular types 3`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "abc",
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept circular types 4`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept circular types 5`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "abc",
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "abc",
                        },
                        Object {
                          "__typename": "Node",
                          "children": Array [
                            Object {
                              "__typename": "Leaf",
                              "name": "xyz",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept simple leaf 1`] = `
Object {
  "__typename": "Leaf",
  "name": "abcd",
}
`;

exports[`circular data types reject invalid circular types 1`] = `"Data \\"NodeType\\" cannot represent value: 3."`;

exports[`circular data types reject invalid circular types 2`] = `"Data \\"NodeType\\" cannot represent value: [{ __typename: \\"Leaf\\", name: \\"abc\\" }]."`;

exports[`circular data types reject invalid circular types 3`] = `"Data \\"NodeType\\" cannot represent value: 3."`;

exports[`circular data types reject invalid circular types 4`] = `"Data \\"NodeType\\" cannot represent value: 3."`;

exports[`circular data types reject invalid circular types 5`] = `"Data \\"NodeType\\" cannot represent value: 3."`;

exports[`parse simple data variants accept recursive nodes 1`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "xyz",
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 2`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "abc",
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 3`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "abc",
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 4`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 5`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "abc",
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "abc",
                        },
                        Object {
                          "__typename": "Node",
                          "children": Array [
                            Object {
                              "__typename": "Leaf",
                              "name": "xyz",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept simple leaf 1`] = `
Object {
  "__typename": "Leaf",
  "name": "abcd",
}
`;

exports[`parse simple data variants don't accept non data values 1`] = `"Data \\"NodeType\\" cannot represent value: [\\"Leaf\\"]."`;

exports[`parse simple data variants don't accept non data values 2`] = `"Data \\"NodeType\\" cannot represent value: [{ __typename: \\"Leaf\\", name: \\"abcd\\" }]."`;

exports[`parse simple data variants reject invalid recursive nodes 1`] = `"Data \\"NodeType\\" cannot represent value: 3."`;

exports[`parse simple data variants reject invalid recursive nodes 2`] = `"Data \\"NodeType\\" cannot represent value: [{ __typename: \\"Leaf\\", name: \\"abc\\" }]."`;

exports[`parse simple data variants reject invalid recursive nodes 3`] = `"Data \\"NodeType\\" cannot represent value: 3."`;

exports[`parse simple data variants reject invalid recursive nodes 4`] = `"Data \\"NodeType\\" cannot represent value: 3."`;

exports[`parse simple data variants reject invalid recursive nodes 5`] = `"Data \\"NodeType\\" cannot represent value: 3."`;
